# sig720_task5d

./: .gitignore  X_test_processed.csv  X_test_top5_processed.csv  X_train_processed.csv  X_train_top5_processed.csv  linear_model_corrected.pkl  linear_model_top5.pkl  main.py  paris_real_estate_processed.csv  pyproject.toml  scaler_top5.pkl  streamlit_app.py  task5d_krishna.ipynb  task5d_report_krishna.md
